--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,7 +58,26 @@
     <audio data-key="76" src="sounds/tink.wav"></audio>
 
     <script>
-      //start
+      const playSound = (e) => {
+        const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+        const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+        if (!audio) return; //stop from running on all keys
+        audio.currentTime = 0; //allows for interruption
+        audio.play();
+        key.classList.add("playing"); //add class to key
+      };
+
+      const removeTransition = function (e) {
+        //pick the longest transition
+        if (e.propertyName !== "transform") return; //skip if not transform
+        this.classList.remove("playing");
+      };
+
+      const keys = document.querySelectorAll(".key");
+      keys.forEach((key) => {
+        key.addEventListener("transitionend", removeTransition);
+      }); //add event listener to each div .key class element
+      window.addEventListener("keydown", playSound);
     </script>
   </body>
 </html>
